--- a/book_store/src/components/Book/Book.css
+++ b/book_store/src/components/Book/Book.css
@@ -9,8 +9,8 @@ li {
 }
 .card {
   box-shadow: 0px 5px 10px -1px #ccc;
-  height: 400px;
-  width: 200px;
+  height: 446px;
+  width: 317px;
   margin: 0 0.5rem;
   text-align: center;
   padding: 0.5rem;
@@ -66,4 +66,9 @@ li {
     display: grid;
     grid-template-columns: repeat(1, 250px);
   }
+}
+
+
+.checked {
+  color: orange;
 }
